# fpcurator

./: .gitignore  AutoCurator.bat  AutoCurator.py  AutoCurator.spec  README.md  Therese.py  clients.txt  fpcurator.py  fpcurator.spec  help.html  options.ini  pyproject.toml  requirements.txt  tooltip.py
scripts/: __init__.py  winesetup.sh
sites/: AddictingGames.py  Andkon.py  Construct.py  CoolmathGames.py  DeviantArt.py  EtoysIllinois.py  FreeArcade.py  FurAffinity.py  GameGame.py  GameJolt.py  Greenfoot.py  ItchIO.py  JayIsGames.py  Kongregate.py  Miniclip.py  Newgrounds.py  Therese.py  Unknown.py  Y8.py  c4399.py  defs.txt
